--- a/details.html
+++ b/details.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>CA JavaScript</title>
+    <title>CA JavaScript Details</title>
     <link rel="stylesheet" href="css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -14,15 +14,17 @@
         <li><a href ="./contact.html">Contact</a></li>
         <li><a href ="./details.html">Details</a></li>
     </ul>
-    <div>
-        <h1>Drinks</h1>
+    <div class="container">
+        <h1>Details</h1>
 
-        <div class="results">
-            Loading...
+        <div class="drink-details"></div>
+
+        <div class="loading">
+        
 
     
         </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="./details.js"></script>
 </body>
 </html>
