--- a/contact.html
+++ b/contact.html
@@ -8,15 +8,42 @@
         <link rel="icon" href="data:;base64,=" />
     </head>
     <body>
+        <ul class="nav">
+            <li><a href ="./index.html">Home</a></li>
+            <li><a href ="./contact.html">Contact</a></li>
+            <li><a href ="./details.html">Details</a></li>
+        </ul>
         <main class="container">
-            Loading...
+            
             <form id="contactForm">
                 <div>
+                    <label>
+                    First name (required)
                     <input name="firstname" id="name" placeholder="Name" />
+                    </label>
+                    <div class="form-error" id="firstnameError">Your first name is required</div>
                 </div>
 
                 <div>
+                    <label>
+                        Email (required)
                     <input name="email" id="email" placeholder="Email" />
+                   </label>
+                   <div class="form-error" id="emailError">Your email is required</div>
+                </div>
+                <div>
+                    <label>
+                        Adress (minimum 25 characters)
+                    <input name="adress" id="adress" placeholder="Adress" />
+                    </label>
+                    <div class="form-error" id="adressError">Your adress must be at least 25 characters</div>
+                </div>
+                <div>
+                    <label>
+                        Message (minimum 10 characters)
+                    <input subject="subject" id="message" placeholder="Message" />
+                     </label>
+                     <div class="form-error" id="messageError">Your message must be at least 10 characters</div>
                 </div>
 
                 <button>Submit</button>
