--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Submit event</title>
         <link rel="stylesheet" href="css/style.css" />
-        <link rel="icon" href="data:;base64,=" />
     </head>
     <body>
         <ul class="nav">
@@ -49,6 +48,6 @@
                 <button>Submit</button>
             </form>
         </main>
-        <script src="./contact.js"></script>
+        <script src="/java/contact.js"></script>
     </body>
 </html>
