--- a/details.html
+++ b/details.html
@@ -6,7 +6,6 @@
     <title>CA JavaScript Details</title>
     <link rel="stylesheet" href="css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
 </head>
 <body>
     <ul class="nav">
@@ -25,6 +24,6 @@
     
         </div>
     </div>
-    <script src="./details.js"></script>
+    <script src="/java/details.js"></script>
 </body>
 </html>
