--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>CA JavaScript</title>
     <link rel="stylesheet" href="css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
 </head>
 <body>
     <ul class="nav">
@@ -23,6 +22,6 @@
     
         </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="/java/script.js"></script>
 </body>
 </html>
