final final update

--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,6 @@
                 <button>Submit</button>
             </form>
         </main>
-        <script src="/java/contact.js"></script>
+        <script src="./java/contact.js"></script>
     </body>
 </html>
