--- a/details.html
+++ b/details.html
@@ -24,6 +24,6 @@
     
         </div>
     </div>
-    <script src="/java/details.js"></script>
+    <script src="./java/details.js"></script>
 </body>
 </html>
