--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     
         </div>
     </div>
-    <script src="/java/script.js"></script>
+    <script src="./java/script.js"></script>
 </body>
 </html>
